将三个系统的截图整合到一起